k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
spec:
  ingressClassName: nginx
  rules:
    - host: board.k8s.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-client
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: board-server
                port:
                  number: 3001

    - host: uat.board.k8s.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-client
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: board-server
                port:
                  number: 3001
